--- a/integrated-menu.html
+++ b/integrated-menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RACP Integrated Menu</title>
-    <link rel="stylesheet" href="integrated-menu.css">
+    <link rel="stylesheet" href="https://russelsese.github.io/racp-integrated-menu.github.io/integrated-menu.css">
 </head>
 <body>
     <div class="integrated-menu-container">
